fix: migrate Forge tests to blueprint API, fix CDM auto-heal races and version typo